<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Regional Taxi</string>
    <string name="google_map_api_key">AIzaSyBkbkmB3-DgM4IXuc3g-smbbrOLUi6jJ54</string>
    <string name="tv_intro1">Yaqin-atrofdagi jamoat haydovchisi olib ketishini so\'rang</string>
    <string name="tv_next">Next</string>
    <string name="tv_skip">Skip</string>
    <string name="tv_intro2">Katta haydovchilar tarmog\'i sizga qulay, xavfsiz va arzon sayohatni topishga yordam beradi</string>
    <string name="tv_intro3">Haydovchini oldindan bilib oling va xaritada real vaqt rejimida joriy manzilni ko\'rish imkoniyatiga ega bo\'ling</string>
    <string name="tv_start">Start</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_taxi">AllOne Driver</string>
    <string name="language_change">Выберите язык</string>
    <string name="txt_language_rus">Русский</string>
    <string name="txt_language_ozbek">O\'zbekcha</string>
    <string name="enterSomething">Ввидени что-то</string>
    <string name="text_phone">Номер телефона</string>
    <string name="phone_auth_text">Через номер телефона</string>
    <string name="auth_phone_title">Войти в систему</string>
    <string name="signIn">Войти</string>
    <string name="enterCode">Войти код-парол</string>
    <string name="sendSMStoNum">На ваш номер +998 90 568 1015\n отправлен SMS с кодом</string>
    <string name="sendAgain"><u>Отправит занова</u></string>
    <string name="continue_">Продолжить</string>
    <string name="enterToSystem">Войти в систему</string>
    <string name="viaPhoneNumber">Через номер телефона</string>
    <string name="noAccount">У вас нет аккаунта</string>
    <string name="register"><u>Регистрация</u></string>
    <string name="registerSimple">Kirish</string>
    <string name="entrance">Вход</string>
    <string name="numberDoesNotExist">В систему отсуствует такой номер</string>
    <string name="Active">Активность</string>
    <string name="interest_rate">Процентная ставка:</string>
    <string name="earning">Заработок</string>
    <string name="night_mode">Ночной режим</string>
    <string name="more_details">Подробнее</string>
    <string name="card_brand">Марка авто:</string>
    <string name="color">Цвет:</string>
    <string name="number">Номер:</string>
    <string name="year">Год:</string>
    <string name="registration_date">Дата регистрации</string>
    <string name="license_term">Срок лицензии</string>
    <string name="license_number">Номер лицензии:</string>
    <string name="general">Общий</string>
    <string name="from_taxi">От Такси</string>
    <string name="from_parcels">От посылок</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="driver_card">Карта водителя:</string>
    <string name="departure_date">Дата отбытия:</string>
    <string name="passengers">Пасажиров:</string>
    <string name="income">Заработок</string>
    <string name="language">Язык</string>
    <string name="settings">Настройки</string>
    <string name="night_mod">Ночной режим</string>
    <string name="logout">Выйти</string>
    <string name="support">Тех поддержка</string>
    <string name="change_location">Изменить постоянный маршрут</string>
    <string name="navigator">Навигаторов</string>
    <string name="show_card_in_new_order">Показать карту в новом заказе</string>
    <string name="voice_notification">Голосовое уведомление</string>
    <string name="notification">Уведомление</string>
    <string name="payment_methods">Способы оплаты</string>
    <string name="about_app">О программе</string>
    <string name="from_where">Откуда:</string>
    <string name="where">Куда:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet Ut sed viverra senectus ut accumsan in tempor</string>
    <string name="back">Назад</string>
    <string name="cash_method">Наличными</string>
    <string name="corporate">Корпоративный</string>
    <string name="inside_of_city">Такси внутри города</string>
    <string name="tariff_inside">Внутри городской пакет</string>
    <string name="mail_inside">Почта внутри города</string>
    <string name="set_tariff">Настроить</string>
    <string name="more">Подробнее</string>
    <string name="tariffs">Тарифы</string>
    <string name="route">Маршрут</string>
    <string name="lorem_ipsum_dolor">Lorem In augue quise feugiat enim nibh faucibus.</string>
    <string name="Accept">Принять</string>
    <string name="women_tariff">Женский тариф</string>
    <string name="need_to_check">Вам требуется пройти проверку в наших центрах</string>
    <string name="profile">Профиль</string>
    <string name="history">История</string>
    <string name="earnings">Заработок</string>
    <string name="title_activity_maps">Map</string>
    <string name="choose_region">Выберите регион</string>
    <string name="search">Поиск</string>
    <string name="bonus_points">Бонусные баллы:</string>
    <string name="go_to">Перейти</string>
    <string name="collect_bonuses">Как набрать бонусы</string>
    <string name="to_use">Как использовать</string>
    <string name="your_gender">Ваш пол</string>
    <string name="your_birthday">День вашего рождения</string>
    <string name="change_my_details">Изменить мои данные</string>
    <string name="change_my_phone">Изменить номер телефона</string>
    <string name="change_my_photo">Изменить фото профиля</string>
    <string name="language_app">Язык программы</string>
    <string name="female">Женский</string>
    <string name="male">Мужской</string>
    <string name="choose_gender">Веберите пол</string>
    <string name="orders_history">История заказов</string>
    <string name="bonuses">Бонусы</string>
    <string name="bind_card">Привязка карты</string>
    <string name="info">Информация</string>
    <string name="bonus_balls">Бонусные баллы</string>
    <string name="bonus">бонусы</string>
    <string name="sum">сум</string>
    <string name="how_to_get">Как получить?</string>
    <string name="how_to_get_bonus">Как набрать бонусы</string>
    <string name="how_to_use">Как использовать</string>
    <string name="transaction_history">История транзакции</string>
    <string name="card_binding">Привязать карту</string>
    <string name="enter_card_data">Ввести данные карты</string>
    <string name="card_title">Название карты</string>
    <string name="change_route">Изменить постоянный маршрут</string>
    <string name="show_map_order">Показать карту в новом заказе</string>
    <string name="choose_time">Выберите время</string>
    <string name="from">Откуда:</string>
    <string name="enter_time">Введите время</string>
    <string name="to">До</string>
    <string name="accept">Принять</string>
    <string name="card_number">Номер карты</string>
    <string name="valid_date">Срок действия</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="card_unavailable">*Отсутсвует такая карта</string>
    <string name="fill_field_correct">*Заполните все данные корректно</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="region_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_bottom">Главная</string>
    <string name="balance">Баланс</string>
    <string name="orders">Заказы</string>
    <string name="only_mail">Только почта</string>
    <string name="time_on_line">Время на линии:</string>
    <string name="intercity_mail">Почта межгород</string>
    <string name="collect_parcels">Собрать посылки</string>
    <string name="order">За заказы</string>
    <string name="OrdersPaid">Зарабаток</string>
    <string name="historyOrder">История заказов</string>
    <string name="standart">Регион: Стандарт</string>
    <string name="distance">Дистанся</string>
    <string name="price">Спосб оплата</string>
    <string name="transPrice">Заработик денги</string>
    <string name="commission">Комиссия</string>
    <string name="open">Открыть</string>
    <string name="close">close</string>
    <string name="navigator_settings">Настройка навигатора</string>
    <string name="place">Место</string>
    <string name="date">Дата</string>
    <string name="clock">Время</string>
    <string name="envelope">Конверт</string>
    <string name="volume">Объем:</string>
    <string name="sender">Отправитель</string>
    <string name="recipient">Получатель</string>
    <string name="Packages">Посылка</string>
    <string name="passenger_seat">Пассажирское место</string>
    <string name="free">Cвободно</string>
    <string name="offline">Занято офлайн</string>
    <string name="busyOnline">Занято онлайн</string>
    <string name="you_line">Вы на линии</string>
    <string name="baggage">Багаж</string>
    <string name="fragment_main_logo_allone">allOne</string>
    <string name="home_taxi_lb">Такси:</string>
    <string name="home_postoffice_lb">Посылка:</string>
    <string name="home_button_line">Войти на линию</string>
    <string name="home_balance">Баланс:</string>
    <string name="home_status">Статус:</string>
    <string name="home_requests_for_tomorrow">Запросы в наличии:</string>
    <string name="home_rating">Рейтинг:</string>
    <string name="home_taxi_details_toolbar">Клиент</string>
    <string name="home_taxi_details_from">Откуда:</string>
    <string name="home_taxi_details_where">Куда:</string>
    <string name="home_taxi_details_mesto">Место:</string>
    <string name="home_taxi_details_luggage">Багаж</string>
    <string name="home_taxi_details_date">Дата отправления:</string>
    <string name="home_taxi_details_date_details">Дата</string>
    <string name="home_taxi_details_clock">Время</string>
    <string name="home_taxi_details_btn_accept">Принять</string>
    <string name="home_taxi_details_btn_back">Назад</string>
    <string name="home_taxi_client_toolbar">Клиенты</string>
    <string name="home_taxi_client_filter_date">Филтр дата</string>
    <string name="home_taxi_client_filter_clock_date">01 авг 2021</string>
    <string name="home_taxi_client_bottom_title">Выбранно 4 пасажира</string>
    <string name="home_taxi_btn_accept">Выбрать</string>
    <string name="home_post_office_toolbar">Посылки</string>
    <string name="home_post_office_filter_date">Филтр дата</string>
    <string name="home_post_office_clock">Филтр время:</string>
    <string name="home_post_office_details">Посылка</string>
    <string name="home_post_office_posilka">Посылка</string>
    <string name="home_post_office_details_evalope">Конверт</string>
    <string name="home_post_office_details_valume">Объем:</string>
    <string name="home_post_office_details_bag">Сумка 50х50 см</string>
    <string name="home_post_office_details_price">Цена:</string>
    <string name="home_post_office_details_from">Откуда:</string>
    <string name="home_post_office_details__date">Дата отправления</string>
    <string name="home_post_office_details_date">Дата</string>
    <string name="home_post_office_details_clock">Время</string>
    <string name="home_post_office_details_all_price">Общая цена</string>
    <string name="home_post_office_details_btn_accept">Принять</string>
    <string name="home_post_office_in_toolbar">Посылка</string>
    <string name="home_post_office_in_post_office">Посылка</string>
    <string name="fragment_login_phone_sms" tools:ignore="Typos">Наш номер номер придёт СМС с кодом подверждение</string>
    <string name="to_where">Куда:</string>
    <string name="inter_city_taxi">Intercity taxi</string>
    <string name="trip_lowest_price">Trips of your choice at the lowest prices</string>
</resources>