<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.fragments.regionTaxi.RegionTaxiFragment">


    <!-- toolbar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/sochi_10">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:background="@drawable/round_ripple_effect"
            android:scaleType="center"
            android:src="@drawable/ic_carbon_chevron_left_32" />

        <androidx.appcompat.widget.AppCompatImageView
            android:visibility="gone"
            android:id="@+id/active_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:background="@drawable/round_ripple_effect"
            android:padding="@dimen/dimen_5dp"
            android:src="@drawable/ic_bxs_receipt" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- header-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sochi_10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/inter_city_tv"
                    style="@style/txt_display_bold_22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="@dimen/dimen_13dp"
                    android:text="@string/inter_city_taxi"
                    android:textColor="@color/brand_main_on_primary"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lowest_price_tv"
                    style="@style/txt_display_regular_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/trip_lowest_price"
                    android:textColor="@color/seattle_100"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inter_city_tv" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_trip_car"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- locations card-->
            <androidx.cardview.widget.CardView
                android:id="@+id/location_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="-19dp"
                app:cardCornerRadius="@dimen/dimen_13dp"
                app:layout_constraintTop_toBottomOf="@id/header_container">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp"
                        android:paddingTop="16dp">

                        <!-- locations container-->
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="4dp"
                                android:src="@drawable/ic_line_where_from" />

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:orientation="vertical">

                                <!-- from where btn-->
                                <androidx.appcompat.widget.LinearLayoutCompat
                                    android:id="@+id/from_where_btn"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:id="@+id/from_where_tv"
                                        style="@style/txt_display_medium_16"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:ellipsize="end"
                                        android:maxLines="1"
                                        android:text="@string/from_where"
                                        android:textColor="@color/seattle_100" />

                                    <View
                                        android:layout_width="match_parent"
                                        android:layout_height="@dimen/dimen_1dp"
                                        android:layout_marginTop="12dp"
                                        android:background="@color/brand_main_wild_sand" />

                                </androidx.appcompat.widget.LinearLayoutCompat>

                                <!-- from where btn-->
                                <androidx.appcompat.widget.LinearLayoutCompat
                                    android:id="@+id/to_where_btn"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:orientation="vertical">

                                    <androidx.appcompat.widget.AppCompatTextView
                                        android:id="@+id/to_where_tv"
                                        style="@style/txt_display_medium_16"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:ellipsize="end"
                                        android:maxLines="1"
                                        android:text="@string/to_where"
                                        android:textColor="@color/seattle_100" />

                                    <View
                                        android:layout_width="match_parent"
                                        android:layout_height="@dimen/dimen_1dp"
                                        android:layout_marginTop="12dp"
                                        android:background="@color/brand_main_wild_sand" />

                                </androidx.appcompat.widget.LinearLayoutCompat>


                            </androidx.appcompat.widget.LinearLayoutCompat>


                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <!-- calendar container-->
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/calendar_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingVertical="@dimen/dimen_16dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_bxs_calendar" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/date_tv"
                                style="@style/txt_display_medium_16"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:text="31 мая 2022 (Сегодня)"
                                android:textColor="@color/brand_main_on_primary" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!-- search button-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/search_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_6dp"
                        android:background="@drawable/rectangle_ripple_orange_16"
                        android:gravity="center"
                        android:paddingVertical="18dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/txt_display_semibold_16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search"
                            android:textColor="@color/brand_main_on_primary" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_card"
                tools:itemCount="3"
                tools:listitem="@layout/item_inter_city_history" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>